# adventofcode

./: .gitignore  LICENSE  README.md  exec.py  manage.py  pyproject.toml  requirements.txt
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  run.py
solutions/common/: grid.py  iter.py  math.py  partial.py  strings.py
solutions/year2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
tests/: test_day02.py  test_solution_data.py
tests/common/: test_math.py  test_strings.py
tests/test_data/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt
tests/test_data/year2023/: day01.yaml  day02.yaml  day03.yaml  day04.yaml  day05.yaml  day06.yaml  day07.yaml  day08.yaml  day09.yaml  day10.yaml  day11.yaml  day12.yaml  day13.yaml  day14.yaml  day15.yaml  day16.yaml  day17.yaml  day18.yaml  day19.yaml  day20.yaml  day21.yaml  day22.yaml  day23.yaml  day24.yaml  day25.yaml
tests/year2023/: test_day02.py
