[project]
name = "adventofcode-solutions"
version = "2013"
description = "Advent of Code solutions"
requires-python = ">=3.12"

[project.entry-points."adventofcode.user"]
ralphje = "solutions.run:aoc_entrypoint"

[tool.black]
line-length = 100
target-version = ['py312']
preview = true

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "PT", "SIM", "PERF", "C", "I", "RUF"]
ignore = ["B905"]
